--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -146,7 +146,7 @@
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>Created a basic website to assist my Order of the Arrow Chapter</p>
+                                  <p>Created a basic website to assist my Order of the Arrow (OA) Chapter</p>
 <ul>
 <li>
 <a href="https://harfordchapter.org" target="_blank" 
