--- a/portfolio/work1/index.html
+++ b/portfolio/work1/index.html
@@ -102,7 +102,7 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Harford Chapter OA Website</h1>
-         <p>Created a basic website to assist my Order of the Arrow Chapter</p>
+         <p>Created a basic website to assist my Order of the Arrow (OA) Chapter</p>
 <ul>
 <li>
 <a href="https://harfordchapter.org" target="_blank" 
