--- a/portfolio/excel-gme/index.html
+++ b/portfolio/excel-gme/index.html
@@ -99,8 +99,18 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Coming Soon - Excel GME Dashboard</h1>
-         
+         <h1>Excel GME Dashboard</h1>
+         <p>Used stock data from yahoo finance to analyze the Gamestop stock</p>
+<p>Here is the html file for the dashboard:</p>
+<div style="width:100%; max-width:900px; margin:auto;">
+  <iframe
+    src="/gme-dash.htm"
+    width="100%"
+    height="600"
+    style="border:none;"
+    allowfullscreen>
+  </iframe>
+</div>
          
       </div>
     </div>
