--- a/portfolio/excel-housing/index.html
+++ b/portfolio/excel-housing/index.html
@@ -99,8 +99,19 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Coming Soon - Excel Housing Dashboard</h1>
-         
+         <h1>Excel Housing Dashboard</h1>
+         <p>Used data from <a href="https://www.kaggle.com/datasets/camnugent/california-housing-prices" target="_blank" 
+  rel="noopener noreferrer">this dataset</a> on Kaggle to analyze California housing prices</p>
+<p>Here is the html file for the dashboard:</p>
+<div style="width:100%; max-width:900px; margin:auto;">
+  <iframe
+    src="/house.htm"
+    width="100%"
+    height="600"
+    style="border:none;"
+    allowfullscreen>
+  </iframe>
+</div>
          
       </div>
     </div>
