Removed post section and updated projects

--- a/portfolio/eagle/index.html
+++ b/portfolio/eagle/index.html
@@ -97,8 +97,27 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-        <h1>Page not found</h1>
-        <p><a href="https://lobstergames.github.io/">Return to the home page</a>.</p>
+         <h1>Eagle Scout Project</h1>
+         <p>Created a 3 bin compost system for the Harford Glen Environmental Education Center.</p>
+<p>Through this project, I learned about having effective organization, communication, and leadership skills, as well as budgeting, logistics, construction, and CAD modeling.</p>
+<ul>
+<li><a href="https://www.facebook.com/photo.php?fbid=775840101439958&amp;set=a.244452637912043&amp;type=3&amp;ref=embed_post" target="_blank" 
+  rel="noopener noreferrer">facebook post</a></li>
+</ul>
+<p>Below are initial design images that were used during the construction of the project, created in TinkerCad:</p>
+<p><img src="/img/compost_box2.jpg" alt="comp1"></p>
+<p><img src="/img/compost_box1.jpg" alt="comp2"></p>
+<p>Here is an embedded facebook post with some details about the project:</p>
+<div style="width:100%; max-width:900px; margin:auto;">
+  <iframe
+    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FHCPSchools%2Fposts%2Fpfbid02BzQsh2HaLF7tRzt95dgbBypSWRLWX9SxyPcXBNf2RNiWmHrqAYUwRVnfCeWhh51Vl&amp;show_text=true&amp;width=500"
+    width="100%"
+    height="600"
+    style="border:none;"
+    allowfullscreen>
+  </iframe>
+</div>
+         
       </div>
     </div>
   </div>
