--- a/test/testing/index.html
+++ b/test/testing/index.html
@@ -97,8 +97,11 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Thompson Sampling</h1>
-         <p>This will outline the creation of a Thompson Sampling algorithm</p>
+         <h1></h1>
+         
+
+
+<p>This will outline the creation of a Thompson Sampling algorithm</p>
 <blockquote>
 <ul>
 <li>Scenario: We have option a with an unknown p = 0.8 and option b with an unknown p = 0.3</li>
@@ -140,9 +143,7 @@ i &lt;- 100 #number of times the trial is run</code></pre>
     print(&quot;Chose B&quot;)
   }
   }</code></pre>
-<pre><code>## [1] &quot;Chose A&quot;
-## [1] &quot;Chose A&quot;
-## [1] &quot;Chose B&quot;
+<pre><code>## [1] &quot;Chose B&quot;
 ## [1] &quot;Chose B&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
@@ -157,11 +158,13 @@ i &lt;- 100 #number of times the trial is run</code></pre>
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
-## [1] &quot;Chose B&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
-## [1] &quot;Chose B&quot;
+## [1] &quot;Chose A&quot;
+## [1] &quot;Chose A&quot;
+## [1] &quot;Chose A&quot;
+## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
@@ -240,6 +243,7 @@ i &lt;- 100 #number of times the trial is run</code></pre>
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;
 ## [1] &quot;Chose A&quot;</code></pre>
+
          
       </div>
     </div>
